add grouping by tags
