# server/app/controllers/swagger/v1/smartresponse/Ticket.scala
@@ -1,4 +1,4 @@
-package controllers.swagger.v1
+package controllers.swagger.v1.smartresponse
 
 import play.api.mvc._
 import com.google.inject.Inject
@@ -16,13 +16,8 @@ import io.circe.generic.auto._
 import io.circe.syntax._
 import shared.models.swagger.smartresponse.v1._
 
-trait Smartresponse extends ExtendedController with SimpleRouter with Circe {
+trait Ticket extends ExtendedController with SimpleRouter with Circe {
   def routes: Router.Routes = {
-
-    case POST(p"/auth") =>
-      Action.async(circe.json) { implicit request =>
-        constructResult(postAuth().map(e => Ok(e.asJson)))
-      }
 
     case GET(p"/last_ticket" ? q"authkey=$authkey") =>
       Action.async { implicit request =>
@@ -44,23 +39,10 @@ trait Smartresponse extends ExtendedController with SimpleRouter with Circe {
         constructResult(postTicketsMedia(ticketId, authkey))
       }
 
-    case GET(p"/me" ? q"authkey=$authkey") =>
-      Action.async { implicit request =>
-        constructResult(getMe(authkey).map(e => Ok(e.asJson)))
-      }
-
-    case PUT(p"/me" ? q"authkey=$authkey") =>
-      Action.async(circe.json) { implicit request =>
-        constructResult(putMe(authkey))
-      }
-
   }
 
-  def postAuth()(implicit request: RequestWithAttributes[Json]): HttpResult[AuthKey]
   def getLast_ticket(authkey: String)(implicit request: RequestWithAttributes[AnyContent]): HttpResult[ApiTicket]
   def postTickets(authkey: String)(implicit request: RequestWithAttributes[Json]): HttpResult[ApiTicket]
   def putTickets(authkey: String, ticketId: String)(implicit request: RequestWithAttributes[Json]): HttpResult[Result]
   def postTicketsMedia(ticketId: String, authkey: String)(implicit request: RequestWithAttributes[MultipartFormData[Files.TemporaryFile]]): HttpResult[Result]
-  def getMe(authkey: String)(implicit request: RequestWithAttributes[AnyContent]): HttpResult[UserData]
-  def putMe(authkey: String)(implicit request: RequestWithAttributes[Json]): HttpResult[Result]
 }
